5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4357/executions/1577_1334.log
== TEST (2019-03-15 20:58:37) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 4 x 2)

print("Divisao: ", 16 / 2)

print("Resto: ", 49 / 6)

print("Potenciacao: ", 2 * 4)
-- ERROR:
File "XXXX", line 5
    print("Multiplicacao: ", 4 x 2)
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 20:59:24) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 4 . 2)

print("Divisao: ", 16 / 2)

print("Resto: ", 49 / 6)

print("Potenciacao: ", 2 * 4)
-- ERROR:
File "XXXX", line 5
    print("Multiplicacao: ", 4 . 2)
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 20:59:37) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 4 . 2)

print("Divisao: ", 16 / 2)

print("Resto: ", 49 / 6)

print("Potenciacao: ", 2 * 4)
-- ERROR:
File "XXXX", line 5
    print("Multiplicacao: ", 4 . 2)
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 21:00:21) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 4 x 2)

print("Divisao: ", 16 / 2)

print("Resto: ", 49 / 6)

print("Potenciacao: ", 2 * 4)
-- ERROR:
File "XXXX", line 5
    print("Multiplicacao: ", 4 x 2)
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 21:00:58) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 2 x 4)

print("Divisao: ", 16 / 2)

print("Resto: ", 49 / 6)

print("Potenciacao: ", 2 * 4)
-- EXECUTION TIME:
0.185141
-- ERROR:
  File "/home/codebench/codes/1577/1334/main.py", line 5
    print("Multiplicacao: ", 2 x 4)
                               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 21:01:06) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 2 x 4)

print("Divisao: ", 16 / 2)

print("Resto: ", 49 / 6)

print("Potenciacao: ", 2 * 4)
-- ERROR:
File "XXXX", line 5
    print("Multiplicacao: ", 2 x 4)
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 21:01:57) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 2 . 4)

print("Divisao: ", 16 / 2)

print("Resto: ", 49 / 6)

print("Potenciacao: ", 2 * 4)
-- EXECUTION TIME:
0.188472
-- ERROR:
  File "/home/codebench/codes/1577/1334/main.py", line 5
    print("Multiplicacao: ", 2 . 4)
                                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 21:02:02) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 2 . 4)

print("Divisao: ", 16 / 2)

print("Resto: ", 49 / 6)

print("Potenciacao: ", 2 * 4)
-- ERROR:
File "XXXX", line 5
    print("Multiplicacao: ", 2 . 4)
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 21:02:33) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 4x2)

print("Divisao: ", 16 / 2)

print("Resto: ", 49 / 6)

print("Potenciacao: ", 2 * 4)
-- ERROR:
File "XXXX", line 5
    print("Multiplicacao: ", 4x2)
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 21:04:15) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 2 ** 4 )

print("Divisao: ", 16 / 2)

print("Resto: ", 49 / 6)

print("Potenciacao: ", 2 * 4)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  16
Divisao:  8.0
Resto:  8.166666666666666
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 21:04:23) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 2 ** 4 )

print("Divisao: ", 16 / 2)

print("Resto: ", 49 / 6)

print("Potenciacao: ", 2 * 4)
-- EXECUTION TIME:
0.170757
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  16
Divisao:  8.0
Resto:  8.166666666666666
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 21:04:31) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 2 ** 4 )

print("Divisao: ", 16 / 2)

print("Resto: ", 49 / 6)

print("Potenciacao: ", 2 * 4)
-- EXECUTION TIME:
0.116148
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  16
Divisao:  8.0
Resto:  8.166666666666666
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 21:04:35) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 2 ** 4 )

print("Divisao: ", 16 / 2)

print("Resto: ", 49 / 6)

print("Potenciacao: ", 2 * 4)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  16
Divisao:  8.0
Resto:  8.166666666666666
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 21:07:07) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 2 ** 4 )

print("Divisao: ", 16 / 2)

print("Resto: ", 48 / 6)

print("Potenciacao: ", 2 * 4)
-- EXECUTION TIME:
0.19718
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  16
Divisao:  8.0
Resto:  8.0
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 21:07:13) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 2 ** 4 )

print("Divisao: ", 16 / 2)

print("Resto: ", 48 / 6)

print("Potenciacao: ", 2 * 4)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  16
Divisao:  8.0
Resto:  8.0
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 21:08:18) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 2 ** 4 )

print("Divisao: ", 16 / 2)

print("Resto: ", 48 / 5)

print("Potenciacao: ", 2 * 4)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  16
Divisao:  8.0
Resto:  9.6
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 21:09:46) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 2 ** 4 )

print("Divisao: ", 16 / 2)

print("Resto: ", 8)

print("Potenciacao: ", 2 * 4)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  16
Divisao:  8.0
Resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 21:10:21) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 2 ** 4 )

print("Divisao: ", 16 / 2)

print("Resto: ", 8)

print("Potenciacao: ", 8)
-- EXECUTION TIME:
0.157863
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  16
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 21:10:29) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 2 ** 4 )

print("Divisao: ", 16 / 2)

print("Resto: ", 8)

print("Potenciacao: ", 8)
-- EXECUTION TIME:
0.14221
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  16
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 21:10:54) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 2 ** 4 )

print("Divisao: ", 16 / 2)

print("Resto: ", 8)

print("Potenciacao: ", 8)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  16
Divisao:  8.0
Resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 21:11:44) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 2 ** 4 )

print("Divisao: ", 16 / 2)

print("Resto: ", 48 / 5)

print("Potenciacao: ", 2 * 4)
-- EXECUTION TIME:
0.134376
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  16
Divisao:  8.0
Resto:  9.6
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 21:12:07) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 2 ** 4 )

print("Divisao: ", 16 / 2)

print("Resto: ", 48 / 5)

print("Potenciacao: ", 2 * 4)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  16
Divisao:  8.0
Resto:  9.6
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 15:18:07) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 2 ** 4 )

print("Divisao: ", 16 / 2)

print("Resto: ", 48 / 5)

print("Potenciacao: ", 2 * 4)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  16
Divisao:  8.0
Resto:  9.6
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 15:19:41) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 4**2 )

print("Divisao: ", 16 / 2)

print("Resto: ", 58 / 5)

print("Potenciacao: ", 2 * 4)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  16
Divisao:  8.0
Resto:  11.6
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 15:20:26) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 2**2 )

print("Divisao: ", 16 / 2)

print("Resto: ",  / 5)

print("Potenciacao: ", 2 * 4)
-- ERROR:
File "XXXX", line 9
    print("Resto: ",  / 5)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 15:20:44) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 2**2 )

print("Divisao: ", 16 / 2)

print("Resto: ",568  / 5)

print("Potenciacao: ", 2 * 4)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  4
Divisao:  8.0
Resto:  113.6
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 15:23:25) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 4**2 )

print("Divisao: ", 16 / 2)

print("Resto: ",181 /8 )

print("Potenciacao: ", 2 * 4)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  16
Divisao:  8.0
Resto:  22.625
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 15:23:35) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 4*2 )

print("Divisao: ", 16 / 2)

print("Resto: ",181 /8 )

print("Potenciacao: ", 2 * 4)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  22.625
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 15:24:32) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 4*2 )

print("Divisao: ", 16 / 2)

print("Resto: ",16 /2 )

print("Potenciacao: ", 2 * 4)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8.0
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 15:24:45) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 4*2 )

print("Divisao: ", 16 / 2)

print("Resto: ",16 /2 )

print("Potenciacao: ", 2 * 4)
-- EXECUTION TIME:
0.12776
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8.0
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 15:24:57) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 4*2 )

print("Divisao: ", 16 / 2)

print("Resto: ",16 /2 )

print("Potenciacao: ", 2 * 4)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8.0
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 15:26:46) 
-- CODE:
print("Adicao: ", "5 + 3")
print("Subtracao: ", "16 - 8")
print("Multiplicacao: ", "4*2" )
print("Divisao: ", "16 / 2")
print("Resto: ","16 /2")
print("Potenciacao: ", "2 * 4")
-- EXECUTION TIME:
0.201944
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  5 + 3
Subtracao:  16 - 8
Multiplicacao:  4*2
Divisao:  16 / 2
Resto:  16 /2
Potenciacao:  2 * 4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 15:26:50) 
-- CODE:
print("Adicao: ", "5 + 3")
print("Subtracao: ", "16 - 8")
print("Multiplicacao: ", "4*2" )
print("Divisao: ", "16 / 2")
print("Resto: ","16 /2")
print("Potenciacao: ", "2 * 4")
-- OUTPUT:
Adicao:  5 + 3
Subtracao:  16 - 8
Multiplicacao:  4*2
Divisao:  16 / 2
Resto:  16 /2
Potenciacao:  2 * 4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 15:27:54) 
-- CODE:
print("Adicao: ", 5 + 3)
print("Subtracao: ", 16 - 8)
print("Multiplicacao: ", 4*2 )
print("Divisao: ", 16 / 2)
print("Resto: ",16 /2)
print("Potenciacao: ", 2 * 4)
-- EXECUTION TIME:
0.171038
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8.0
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:10:51) 
-- CODE:
print("Adicao: ", 5 + 3)
print("Subtracao: ", 16 - 8)
print("Multiplicacao: ", 4*2 )
print("Divisao: ", 16 / 2)
print("Resto: ",16 %2)
print("Potenciacao: ", 2 * 4)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  0
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:36:35) 
-- CODE:
print("Adicao: ", 5 + 3)
print("Subtracao: ", 16 - 8)
print("Multiplicacao: ", 4*2 )
print("Divisao: ", 16 / 2)
print("Resto: ",16 %2)
print("Potenciacao: ", 2 * 4)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  0
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 19:08:30) 
-- CODE:
print("Adicao: ", 5 + 3)
print("Subtracao: ", 16 - 8)
print("Multiplicacao: ", 4*2 )
print("Divisao: ", 16 / 2)
print("Resto: ",16 %2)
print("Potenciacao: ", 2 ** 4)
-- EXECUTION TIME:
0.205035
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  0
Potenciacao:  16
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 19:08:33) 
-- CODE:
print("Adicao: ", 5 + 3)
print("Subtracao: ", 16 - 8)
print("Multiplicacao: ", 4*2 )
print("Divisao: ", 16 / 2)
print("Resto: ",16 %2)
print("Potenciacao: ", 2 ** 4)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  0
Potenciacao:  16
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 19:19:02) 
-- CODE:
print("Adicao: ", 5 + 3)
print("Subtracao: ", 16 - 8)
print("Multiplicacao: ", 4*2 )
print("Divisao: ", 16 / 2)
print("Resto: ",16/ 2)
print("Potenciacao: ", 2 * 4)
-- EXECUTION TIME:
0.174059
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8.0
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 19:19:07) 
-- CODE:
print("Adicao: ", 5 + 3)
print("Subtracao: ", 16 - 8)
print("Multiplicacao: ", 4*2 )
print("Divisao: ", 16 / 2)
print("Resto: ",16/ 2)
print("Potenciacao: ", 2 * 4)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8.0
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 19:19:29) 
-- CODE:
print("Adicao: ", 5 + 3)
print("Subtracao: ", 16 - 8)
print("Multiplicacao: ", 4*2 )
print("Divisao: ", 16 / 2)
print("Resto: ",8)
print("Potenciacao: ", 2 * 4)
-- EXECUTION TIME:
0.120012
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
